Fix chapter 2 - 1.2.4 to be fixed

--- a/ACT_Report/cover.tex
+++ b/ACT_Report/cover.tex
@@ -14,7 +14,7 @@
       {\Large Corso di Laurea Magistrale in Computer Engineering} \\
       \vspace{20mm}
       {\LARGE Advanced Control Techniques Project} \\
-      \vspace{5mm}{\LARGE\textbf{Multinomial Logistic Regression for a Supervised Learning problem}}                  
+      \vspace{5mm}{\LARGE\textbf{Multinomial Logistic Regression}}                  
       \vspace{15mm}
 \end{center}
 \begin{flushleft}                                                                              
