--- a/ACT_Report/main.tex
+++ b/ACT_Report/main.tex
@@ -52,9 +52,8 @@
 {\Huge \textbf{Abstract}}\\
 \vspace{15mm}
 \end{center}
-In this report, it will be shown how to solve a Multinomial Logistic Regression problem (also known as \textit{Softmax Regression}) using a distributed method. The sub-gradient method has been used to distribute calculations among a configurable number of agents. A portion of the dataset is given to each agent and used to minimize a cost function related to the portion of the dataset in its possession.
-A Python3 program has been written supported by several libraries. The most important library is MPI4py which provides implementation of the MPI specifics. MPI is a communication protocol between nodes that executes the same program in parallel. We compared the results obtained through this program with MATLAB script which executes all operation with  a centralized architecture ( meaning that all operations are executed by a single agent).\\
-Several graphs are plotted in order to see the graph of communicating agents, how the consensus is reached and how the cost diminishes to a minimum.
+In this report, it will be shown how to solve a Multinomial Logistic Regression problem (also known as \textit{Softmax Regression}) using a distributed approach. The sub-gradient method has been used to distribute calculations among a configurable number of agents. A portion of the dataset is given to each agent and used to minimize a cost function related to the portion of the dataset in its possession.
+The script solving the problem has been written using \textit{Python 3}. The most important library used is \textit{MPI4py} which provides implementation of the \textit{MPI} environment. \textit{MPI} is a communication protocol between nodes that executes the same program in parallel \cite{CITATION:4}. The results found with the distributed approach have been compared with the results obtained through a \textit{MATLAB} script, which executes all the operation using a centralized architecture (meaning that all operations are executed by a single agent).\\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -66,26 +65,31 @@ Several graphs are plotted in order to see the graph of communicating agents, ho
 \addcontentsline{toc}{chapter}{Introduction}
 
 \section*{Motivations}
-In the past there was a single \textit{Mainframe} that executed all digital computations. Years after, with the creation of the Personal Computer, more people could execute the same operations in private. Today's \textit{Microcontrollers} allow to make smart all kind of devices. More algorithms have been created to connect these devices to distribute computations and tasks.\\
- In general, this approach is useful because it allows cooperation between agents, to reach a common goal. In this case, the ability to split the workload in to several agents guarantees faster execution times.
-The Multinomial Logistic Regression generalizes the logistic regression for a multiclass problems, with more than two possible discrete outcomes, where each observation has several features.
+In the past there was a single \textit{Mainframe} that executed all digital computations. Years after, with the creation of the Personal Computer, more people could execute the same operations in private. Today's \textit{Micro controllers} allow to make smart all kind of devices. More algorithms have been created to connect these devices to distribute computations and tasks.\\
+ In general, this approach is useful because it allows cooperation between agents and permits to reach a common goal. In this case, the ability to split the workload into several agents guarantees faster execution times.\\
+The Multinomial Logistic Regression for a multi-class classification problem, will be solved using a distributed approach in a faster way with respect to the same solution using a centralized method.
 
 \section*{Contributions}
-This work implements a scenario in which there are some agents that estimate a cost function using their own information and those of other agents; they use a \textit{Distributed Sub-gradient Method} to update their own estimates and, in particular, they resolve a \textit{Multinomial Logistic Regression} problem.\\
+This work implements a scenario in which there are some agents that estimate a cost function using their own information and those of other agents; they use a \textit{Distributed Sub-gradient Method} to update their own estimates and, in particular, they solve a \textit{Multinomial Logistic Regression} problem.\\
 
-The first step was to create a MATLAB script that solves a quadratic optimization problem using a gradient method. In this script it has been \textit{simulated} a distributed approach in order to test the effectiveness of the method saw in Distributed Subgradient Methods for Multi-Agent Optimization \cite{CITATION:1}. MATLAB was only used in the prototype phase, because it doesn't allow real parallel computations. After the confirmation that the approach was working, it started the implementation of the algorithm in Python3 using the Message Passing Interface.\\
+The first step was to create a MATLAB script that solves a quadratic optimization problem using a gradient method. In this script it has been \textit{simulated} a distributed approach in order to test the effectiveness of the method saw in Distributed Sub-gradient Methods for Multi-Agent Optimization \cite{CITATION:1}. MATLAB was only used in the prototype phase, because it doesn't allow real parallel computations. After the confirmation that the approach was working, the implementation of the algorithm in Python 3 using the Message Passing Interface was started.\\
 The quadratic form used was 
 \begin{equation} \tag{I}
-x^{T}Qx + r^{T}x
-\end{equation}. \\
-This form was used only to test the convergence of the method.\\
-After having established that, considering that the Supervised Learning problem known as Multinomial Logistic Regression gives as output a probability value for every considered class, it was necessary to implement the softmax function. 
+\dfrac{1}{2}x^{\top}Qx + r^{\top}x
+\end{equation}
+using
 \begin{equation} \tag{II}
+	Qx + r
+\end{equation}
+as gradient. \\
+This form was used only to test the convergence of the method and it was used as base to build the distributed script on it.\\
+After having proved the convergence, considering that the Supervised Learning problem known as Multinomial Logistic Regression gives as output a probability value for every considered class, it was necessary to implement the Softmax function. 
+\begin{equation} \tag{III}
 g_i\left(\theta\right):=\sum_{k=1}^{K}{1\{y^{(i)}=e_k\}\log{\left( \frac{exp(\theta^{(k)^\top}x^{(i)})}{\sum_{k=1}^{K}{exp( \theta^{(j)^\top}x )}} \right)}}
 \end{equation} \cite{CITATION:3}. \\
-The formula saw in \ref{EQ1.7} was minimized in a centralized setup using MATLAB, and the result was compared to the one of the Python distributed program.\\
-It was seen that the algorithm was converging, several tests were executed to find the optimal values for the step-size.\\
-The present work is divided into two chapters. In Chapter \ref{Cap1}, it is introduced the theory behind the problem, it is shown and commented the code. In Chapter \ref{Cap2} there are the results of simulations with some considerations.
+This formula, which will be explained in Chapter \ref{Subsec1.1.2}, has been minimized in a centralized set-up using a MATLAB script, and the result has been compared to the one of the Python distributed script.\\
+At the end, several tests has been executed to find the optimal values for the step-size.\\
+
 % \section*{Organization}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -103,27 +107,29 @@ min \quad \sum\limits_{i=1}^{m} f_{i} \left( x \right) \qquad subject \ to \quad
 \end{equation}
 where $f_i : \mathbb{R}^n \longrightarrow \mathbb{R}$ is the cost function of agent $i$, known only by the agent $i$, and $x \in \mathbb{R}^n$ is the decision variable. It is assumed that:
 \begin{itemize} 
-\item the cost function is convex;
+\item the cost functions are convex;
 \item the agents are distributed over a time-varying topology;
 \item the graph $\left(V,E_\infty\right)$ is connected, where $E_\infty$ is the set of edges $\left(j,i\right)$ representing agent pairs communicating directly an indefinite number of times;
 \item there is no communication delay.
 \end{itemize} 
-Each agent $i$ generates and maintains an estimate of the optimal decision variable based on the gradient of its own cost function and the exchanged estimates of its neighbours at discrete times $t_0, t_1, t_2, ...$. A weights matrix is associated to the communication graph, and its elements are defined as follows:
+Each agent $i$ generates and maintains an estimate of the optimal decision variable based on the gradient of its own cost function and the exchanged estimates of its neighbours at discrete times $t_0, t_1, t_2, ...$. A weights matrix $A$ is associated to the communication graph, and its elements are defined as follows:
 \[
 	\begin{cases}
-		> 0, & \text{if } (i,j) \in E(k) \\
-		0, & \text{otherwise}
+		a^i_i(k) \ge \eta & \text{for each } k \\
+		a^i_j(k) \ge \eta, & \text{if } (j,i) \in E(k) \\
+		a^i_j(k) = 0, & \text{otherwise}
 	\end{cases}
 \]
-Each agent $j$ that receives an information by a neighbour agent $i$ weights this information by multiplying it by $a_i^j(k) \in \mathbb{R}$. Then the estimate of the optimal solution is updated according to:
+with $\eta$ defined as a strictly positive constant.\\
+Each agent $i$ that receives an information by a neighbouring agent $j$ weights this information by multiplying it by $a_j^i(k) \in \mathbb{R}$. Then the estimate of the optimal solution is updated according to:
 \begin{equation} \label{update}
 x^i\left(k+1\right) = \sum_{j=1}^{m}{a_j^i\left(k\right)x^i\left(k\right)-\alpha^i\left(k\right)d_i\left(k\right)}
 \end{equation}
 where $\alpha^i(k)>0$ is the step-size used by agent $i$ and the vector $d_i(k)$ is a sub-gradient of the objective function $f_i(x)$ calculated at $x=x^i(k)$. \cite{CITATION:1}
 
 \subsection {Multinomial Logistic Regression} \label{Subsec1.1.2}
-The problem to be solved is a Supervised Learning problem called Multinomial Logistic Regression, also known as Softmax Regression, and it generalizes the more common Logistic Regression. The difference between them is that in the former there are several classes to be considered, in the latter, there are only two classes (or equivalently a binary class).\\
-The problem to be solved is to find a set of coefficients based on a given dataset to predict the belonging class for an unseen set of features, while minimizing a cost function. The dataset is composed of \textit{N} labelled examples $\{(x^{(1)}, y^{(1)}), ..., (x^{(N)}, y^{(N)})\}$. Each $x^{(i)} \in R^{d_{x}}$ for $i=1, ..., N$ is composed of some features which represent the value upon which is based the estimation of the belonging class, while $y^{(i)} \in R^{d_{y}}$ is the belonging class for the \textit{i-th} example, and can be a value in $\{1, ..., K\}$.
+The problem to be solved is a Supervised Learning problem called Multinomial Logistic Regression, also known as Softmax Regression. It generalizes the more common Logistic Regression. The difference between them is that in the former there are several classes to be considered, in the latter, there are only two classes (or equivalently a binary class).\\
+The problem to be solved is to find a set of coefficients based on a given dataset to predict the belonging class for an unseen set of features, while minimizing a cost function. The dataset is composed of \textit{N} labelled examples $\{(x^{(1)}, y^{(1)}), ..., (x^{(N)}, y^{(N)})\}$. Each $x^{(i)} \in R^{d_{x}}$ for $i=1, ..., N$ is composed of some features which represent the value upon which is based the estimation of the belonging class, while $y^{(i)} \in \{ 1, \dots, K \}$ is the belonging class for the \textit{i-th} example.
 
 Given a single training example $(x^{(i)}, y^{(i)})$, the definition of the cost function is:
 \begin{equation}
@@ -150,7 +156,7 @@ with
 \begin{equation} \label{EQ1.8}
 g_i\left(\theta\right):=\sum_{k=1}^{K}{1\{y^{(i)}=e_k\}\log{\left( \frac{exp(\theta^{(k)^\top}x^{(i)})}{\sum_{j=1}^{K}{exp( \theta^{(j)^\top}x )}} \right)}}
 \end{equation}
-with \textbf{1\{$\cdot$\}} being the \textit{indicator function}.\cite{CITATION:2}
+with \textbf{1\{$\cdot$\}} being the \textit{indicator function} and $e_k$ being a unit vector with $1$ at position $k$ and $0$ otherwise.\cite{CITATION:2}
 
 \subsection {Pseudocode} \label{Subsec1.1.3}
 \begin{algorithm}
@@ -160,14 +166,15 @@ with \textbf{1\{$\cdot$\}} being the \textit{indicator function}.\cite{CITATION:
 \State $\left|\left|\theta_{k+1} - \theta_k\right|\right|  \leq \varepsilon \qquad \varepsilon$ fixed
 \State Number of maximum iterations reached
 \State \textbf{Start:}
-\State Fix initial conditions for each node $\theta_i(0) = [0 \quad ... \quad 0]^T$
-\State Define the Adjacency Matrix, Weights Matrix, $\alpha^i = \alpha$ constant for each iteration
+\State Fix initial conditions for each node $i$ as $\theta_i(0) = [0 \quad ... \quad 0]^T$
+\State Define the Adjacency Matrix and Weights Matrix
 \While{No stop rule is true, each node $i$ does:} 
-    \State calculate $\nabla f_i$
+	\State Calculate $\alpha^i(k)$ using a diminishing step-size rule
+    \State Calculate $\nabla f_i$
     \For {each neighbour j}
-        \State $\theta_i(k+1) = \theta_i(k+1) + a^i_j(k) \theta^j(k)$
+        \State $\theta_i(k+1) = \theta_i(k+1) + a^i_j(k) \theta_j(k)$
     \EndFor
-    \State $\theta_i(k+1) = \theta_i(k+1) - \alpha \nabla f_i$
+    \State Update: $\theta_i(k+1) = \theta_i(k+1) - \alpha^i(k) \nabla f_i$
 \EndWhile
 \State \textbf{Result:}
 \State Each node $i$ should converge to $\theta^*$
@@ -210,7 +217,7 @@ It's important to treat the numbers of the agents as if they were ordered with a
 The loss function (described in Eq. \ref{EQ1.7}) is implemented in the Python function called \textit{loss\_softmax}. It has three parameters:\\
 \begin{itemize}
 	\item \textit{all\_theta}: the matrix with the current estimation of $\theta^*$
-	\item \textit{category\_count}: the number of categories in the dataset. In the IRIS dataset is $3$
+	\item \textit{category\_count}: the number of categories in the dataset. In the IRIS dataset, this number is $3$
 	\item \textit{personal\_dataset}: represents the dataset accessible to the considered agent
 \end{itemize}
 The only addition to the function is the calculation of the \textit{const\_to\_subtract}, a constant used to prevent the overflow. The property used to justify the use of this method is the following:
@@ -281,7 +288,7 @@ def gradient_softmax(all_theta, category_count, dimensions, personal_dataset, no
 
 \subsection {Reaching consensus}
 
-In this section in will be explained how the consensus is reached.\\
+In this section it will be explained how the consensus is reached.\\
 
 The distributed sub-gradient method is an iterative algorithm, so it make use of a cycle in which the calculations are made. In the Python script there is a constant, called \textit{MAX\_ITERATIONS}, that represents the limit of iterations that can be made. \\
 The first thing done in the cycle is the calculation of the step-size, basing the computation on the type chosen from the command line argument.
@@ -316,12 +323,12 @@ After this, the state of each agent is updated using the current state and the s
         u_i = u_i + world.recv(source=node) * weight
 \end{lstlisting}
 
-The variable used here are:
+The variables used here are:
 \begin{itemize}
 	\item  \textit{u\_i}: represents the current estimate of the state of the agents
-	\item \textit{world}: a variable used for communicating between nodes. It is made available by the MPI environment
+	\item \textit{world}: a variable used for communicating between nodes. It is made available by the MPI environment. It makes possible to the nodes to communicate between them, using functions like \textit{send} or \textit{recv}
 	\item \textit{graph}: a variable representing the communication graph. It is created using the functions in the \textit{networkx} library. It has two main functions that can be called: \textit{successors(node)} that returns a list with the out-neighbours of the agent \textit{node} and \textit{predecessors(node)} that returns the in-neighbours
-	\item \textit{rank}: represent the identifier of each agent. It is made available by the MPI environment and it is an integer number, that goes from $0$ to $number of agents - 1$
+	\item \textit{rank}: represents the identifier of each agent. It is made available by the MPI environment and it is an integer number, that goes from $0$ to \textit{number of agents - 1}
 \end{itemize}
 
 After this, the value of the gradient is calculated, using the function name passed as command line argument:
@@ -351,9 +358,9 @@ After this phase, the state is updated using the gradient descent step:
     # Store  my new state
     XX[tt] = u_i
 \end{lstlisting}
-Since the \textit{u\_i} and \textit{grad} variable are matrices, then each component of the gradient (multiplied by the step-size) is subtracted from the current estimate of the state. The result is then stored into an array \textit{XX}, which keeps in memory all the states at each iteration. \\
+Since the \textit{u\_i} and \textit{grad} variable are matrices, then each component of the gradient (multiplied by the step-size) is subtracted from the current estimate of the state. The result is then stored into an array called \textit{XX}, which keeps in memory all the states at each iteration. \\
 
-Consequently, the loss value is calculated at each iteration using the right function. The value is then stored into an array that keeps in memory all the losses at each iteration:
+Consequently, the loss value is calculated at each iteration using the same function used to calculate the gradient. The result is then stored into an array that keeps in memory all the losses at each iteration:
 \begin{lstlisting}
     if function_name == "softmax":
         losses[tt] = func.loss_softmax(XX[tt], category_n, personal_dataset)
@@ -391,15 +398,15 @@ After this, the stop conditions are checked:
 
 This is done in different steps:
 \begin{enumerate}
-	\item The following condition is checked:
+	\item The following condition is firstly checked:
 	\begin{equation}
 		\left\lVert \theta_{t+1} - \theta_{t} \right\rVert
 		\leq \epsilon
 	\end{equation}
-	If it is met, the variable \textit{buff} is set to true. 
+	If it is met, the variable \textit{buff} is set to \textit{true}. 
 	\item The agent \textit{0} collects all the values of \textit{buff} of each agent in the \textit{buffer} variable.
-	\item Agent \textit{0} check if all the conditions in the \textit{buffer} variable are set to true. If they are, then the variable \textit{epsilon\_reached} is set to true.
-	\item This variable is sent to all the other agents using the \textit{bcast} function, that broadcast the value of the variable to all the nodes in the graph.
+	\item Agent \textit{0} check if all the conditions in the \textit{buffer} variable are set to \textit{true}. If they are, then the variable \textit{epsilon\_reached} is set to \textit{true}.
+	\item This variable is sent to all the other agents using the \textit{bcast} function of \textit{world} that broadcasts the value of the variable to all the nodes in the graph.
 	\item As last step, all the agents exit from the main cycle if all of them have met the stop condition. 
 \end{enumerate}
 
@@ -433,21 +440,21 @@ The simulation has been carried out using a random directed graph made up of 17 
 
 For completing this simulation, a diminishing step-size has been used, with the following formulation:
 \begin{equation}
-	\alpha^k = 0.01 \left( \dfrac{1}{k} \right) ^{0.4}
+	\alpha_k = 0.01 \left( \dfrac{1}{k} \right) ^{0.4}
 \end{equation}
 with $k$ indicating the current iteration.\\
-The problem to be solved is the one formulated in \ref{EQ1.7}. Let's suppose to indicate the whole dataset as $S$. Each agent $i$ can access to a limited set $s_i$ of examples contained in $S$. To each agent is given a set $s_i$, chosen as:
+The problem to be solved is the one formulated in \ref{EQ1.7}. Let's suppose to indicate the whole dataset as $S$. Each agent $i$ can access to a limited set $s^i$ of examples contained in $S$. To each agent is given a set $s^i$, chosen as:
 \begin{equation}
 	\label{dataset_condition_union}
-	S = \bigcup\limits_{i=1}^{17} s_i
+	S = \bigcup\limits_{i=1}^{17} s^i
 \end{equation}
 and 
 \begin{equation}
 \label{dataset_condition_intersection}
-\bigcap\limits_{i=1}^{17} s_i = \emptyset
+\bigcap\limits_{i=1}^{17} s^i = \emptyset
 \end{equation}
-In the simulation, the training set $S$ is composed by 120 examples, split into sets $s_i$ of 6 or 7 examples, chosen in order to equation \ref{dataset_condition_union} and \ref{dataset_condition_intersection} hold.  \\
-The iterations run are 15000, sufficient enough to see the function approaching the convergence, but not sufficient enough to reach the minimum value of the function, calculated with MATLAB to be $8.945$. The figure \ref{log_cost} shows in a logarithmic scale how the algorithm tends to minimize the cost value at each iteration. \\
+In the simulation, the training set $S$ is composed by 120 examples, split into sets $s^i$ of 6 or 7 examples, chosen in order to equations \ref{dataset_condition_union} and \ref{dataset_condition_intersection} hold.  \\
+The iterations run are 15000, sufficient enough to see the function approaching the convergence, but not sufficient enough to reach the minimum value of the function, calculated with \textit{MATLAB} to be $8.945$. The figure \ref{log_cost} shows in a logarithmic scale how the algorithm tends to minimize the cost value at each iteration. \\
 \begin{figure}[hb]
 	\centering
 	\includegraphics[scale=0.4]{figs/cost_log_scale}
@@ -486,15 +493,15 @@ To better see the consensus, in this simulation the initial condition have been 
 	\label{avg_consensus}
 \end{figure}
 
-
-\section{Dataset, graph description and minimization function} \label{Sec2.1}
+\section{Solving the Softmax Regression}
+\subsection{Dataset, graph description and minimization function} \label{Sec2.1}
 This dataset is composed of 150 instances, 120 of them used for training while the remaining 30 used for testing purpose. The instances contain 3 classes, each representing a type of Iris flower. Every instance has 4 features: sepal and petal length, sepal and petal width, expressed in $cm$. We tried different types of graphs, all of them chosen to be strongly connected. The results discussed in this chapter, if not differently noted, refer to cyclic graphs with a variable number of nodes. The program can minimize all kinds of loss functions. As shown in Chapter \ref{Sec1.2}, the quadratic and exponential functions can also be optimized, even if they don't guarantee useful results to apply to our problem. The minimization function used in this chapter is the one described in Chapter \ref{Subsec1.1.2}.
 
-\section{Performance} \label{Sec2.2}
-There are some key factors that influence \textit{the computational time}, \textit{the numbers of iterations necessary} and \textit{the accuracy of the results}. They are, but not limited to, number of nodes, type of graph, step-size type and value, etc. \\
+\subsection{Performance} \label{Sec2.2}
+There are some key factors that influence \textit{the computational time}, \textit{the numbers of iterations necessary to reach consensus} and \textit{the accuracy of the results}. They are, but not limited to, the number of nodes, type of graph, step-size type and value, etc. \\
 
 \subsection{Number of nodes} \label{Subsec2.2.1}
-The Python program, thanks to the MPI platform, is capable of running on an arbitrary number of nodes. It was tested on as little as 2 nodes to as many as 60 nodes, which means that every node was processing the data of 2 instances (120 instances divided into 60 nodes). The best performances are obtained when the number of nodes corresponds to the number of physical cores of the machine where it runs. When the number of nodes exceeds greatly the number of physical cores, the resources are oversubscribed. In this case, the performances degrade notably as the nodes compete for cache and memory and the processors' schedulers are put in a difficult situation. On a 4-core test machine, a computation with 5000 iterations and 30 nodes is done in 5 minutes. The same machine can do the same number of iterations, but with 60 nodes, in 15 minutes. Therefore, to show the scalability of the software,  the following tests will be shown on a 4 nodes set-up and a 17 nodes setup (the same of figure 2.1) . \\
+The Python program, thanks to the MPI platform, is capable of running on an arbitrary number of nodes. It was tested on as little as 2 nodes to as many as 60 nodes, which means that every node was processing the data of 2 instances (120 instances divided into 60 nodes). The best performances are obtained when the number of nodes corresponds to the number of physical cores of the machine where it runs. When the number of nodes exceeds greatly the number of physical cores, the resources are oversubscribed. In this case, the performances degrade notably as the nodes compete for cache and memory and the processors' schedulers are put in a difficult situation. On a 4-core test machine, a computation with 5000 iterations and 30 nodes is done in 5 minutes. The same machine can do the same number of iterations, but with 60 nodes, in 15 minutes. Therefore, to show the scalability of the software,  the following tests will be shown on a 4 nodes set-up and a 17 nodes setup (the same of Fig. \ref{graph_17_agents}) . \\
 
 \subsection{Epsilon} \label{Subsec2.2.2}
 This is a small constant used as stop condition. If the norm of the result of the current calculation differs less than $\epsilon$ (chosen arbitrary small) from the previous, the algorithm is stopped. This is used as convergence stop condition. In fact, given the nature of the method used to minimize the cost function, the converge to the optimal value can be reached in a huge amount of time. To prevent this from happening, it has been used this condition.
@@ -502,20 +509,29 @@ This is a small constant used as stop condition. If the norm of the result of th
 \subsection{Learning rate} \label{Subsec2.2.3}
 The step-size plays a big role in the speed of convergence of the algorithm. There are 3 kinds of step-size:
 \begin{enumerate}
-	\item fixed step-size: it has always the same value, which means $\alpha^{k+1} = \alpha^k$
-	\item diminishing step-size: chosen such that $\alpha^{k+1} < \alpha^k$
+	\item fixed step-size: it has always the same value, which means $\alpha_{k+1} = \alpha_k$
+	\item diminishing step-size: chosen such that 
+	\begin{equation}
+	\alpha_{k+1} < \alpha_k
+	\end{equation}
+	\begin{equation}
+	\sum_{k=0}^{+\infty} \alpha_k = +\infty
+	\end{equation}
+	\begin{equation}
+	\lim\limits_{k \to +\infty} \alpha_k = 0
+	\end{equation}
 	\item adaptive step-sizes: chosen with respect to Armijo or (limited) minimization rule.
 \end{enumerate}
 For reasons not discussed in this paper, it's not possible to use the last type of rules in a distributed problem, so the first two types have been used in these simulations.
 
 \subsection{Initial condition} \label{Subsec2.2.4}
-The agents start from an initial condition $x_0$, which represents a guess of the optimal value. The program was tested with random initial conditions for all agents and the consensus was still reached. To guarantee the repeatability of the experiments, the initial condition in the tests is always set to a matrix full of ones.
+The agents start from an initial condition $x_0$, which represents a guess of the optimal value. The program was tested with random initial conditions for all agents and the consensus was still reached. To guarantee the repeatability of the experiments, the initial conditions in the tests are always set to a matrix full of ones.
 
 \section{Four Nodes Setup} \label{Sec2.2}
 
-
 \subsection{Fixed step-size} \label{Subsec2.2.4}
- We will first deal with a simple fixed step-size such as $\alpha^k = \alpha$, with $\epsilon = 10^{-3}$ equal to:\\
+ We will first deal with a simple fixed step-size such as $\alpha^k = \alpha$, with $\epsilon = 10^{-3}$.\\ 
+ A lot of step-size values have been tested, and the results of these test are shown in the following table.
 \begin{scriptsize}
 \begin{center}
 \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
@@ -548,7 +564,7 @@ Through trial and error, the step-size $0.001$ was chosen. It allows to reach go
 \subsection{Diminishing step-size} \label{Subsec2.2.5}
 The diminishing step-size implemented is chosen to be:
 \begin{equation}
-\alpha = \psi \left( \frac{1}{k} \right)^{\gamma}
+\alpha_k = \psi \left( \frac{1}{k} \right)^{\gamma}
 \end{equation}
 Again, several tests were run by tweaking the multiplying constant and the exponent.\\ \\
 
@@ -576,7 +592,7 @@ Again, several tests were run by tweaking the multiplying constant and the expon
 \end{center}
 \end{scriptsize}
 
-\noindent The best result is obtained in only 349 iterations, with $\psi = 0.1$ and $\gamma = 0.5$. This is done in roughly half of a second, obtaining no error. The accuracy is worst then the previous result, but this is obtained in a fraction of the time needed to obtain 0 error with a fixed step-size. A difference of 2 or 3 seconds may not seem important using the Iris Dataset, with a small amount of calculations. In a set-up where a bigger number of calculations and a bigger dataset are involved, one may appreciate the advantages of this faster approach.
+\noindent The best result is obtained in only 349 iterations, with $\psi = 0.1$ and $\gamma = 0.5$. This is done in roughly half of a second, obtaining no error and getting the result in a fraction of the time needed to obtain the same errors with a fixed step-size. A difference of 2 or 3 seconds may not seem important using the Iris Dataset, with a small dataset. In a set-up where a bigger dataset is involved, one may appreciate the advantages of this faster approach.
 
 
 
@@ -622,9 +638,18 @@ The optimal step-size is different from the ideal step-size of the 4 nodes set-u
 \end{center}
 \end{scriptsize}
 
+The values in the table are shown in Fig. \ref{17_agents_performance} too. On the right axis are shown the iterations, in the left axis there are the numbers of error.
 
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.24]{figs/graphs_17_agents_performance}
+	\caption{Results of the test for a graph with 17 agents.}
+	\label{17_agents_performance}
+\end{figure}
 
-TODO: AGGIUNGERE GRAFICI
+It can be seen that two optimal values of $\psi$ and $\gamma$ can be chosen.
+Values of $\psi=0.5$, $\gamma=0.5$ gives only $1$ error in less than half of the iterations required to obtain $0$ errors with $\psi=0.9$ and $\gamma=0.5$. Basing on a given usage of the method, a user could prefer a couple of parameters instead of the other if he prefers velocity instead of accuracy.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%% SVILUPPI FUTURI %%%%%%
